fix: spacing in EventCard

--- a/components/EventCard/styles.less
+++ b/components/EventCard/styles.less
@@ -45,6 +45,11 @@
         display: flex;
         flex-direction: column;
         flex: 1;
+        padding-right: 20px;
+
+        &:last-child {
+          padding-right: 0;
+        }
         
         .ant-space-item {
           margin: 0.25em 0;
